[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus_zpool_iostat_exporter"
authors = [
    {name = "Niels Reuter", email = "n.reuter@fz-juelich.de"},
]
description = "A Python-based Prometheus exporter for logical I/O statistics for ZFS storage pools"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
keywords = ["zfs", "zpool", "iostat", "monitoring", "prometheus"]
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "prometheus_client",
]
dynamic = ["version"]

[project.scripts]
prometheus_zpool_iostat_exporter = "prometheus_zpool_iostat_exporter.main:main"

[project.urls]
repository = "https://github.com/psyinfra/prometheus-zpool-iostat-exporter"
issues = "https://github.com/psyinfra/prometheus-zpool-iostat-exporter/issues"

[tool.setuptools]
packages = ['prometheus_zpool_iostat_exporter']

[tool.setuptools.dynamic]
version = {attr = "prometheus_zpool_iostat_exporter.VERSION"}